<resources>
    <string name="app_name">Project Talent</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="first_str">Welcome to Project Talent. </string>
    <string name="button_str">NEXT</string>
    <string name="username_msg">Please enter your User ID (as listed in the letter that you received with this tablet).</string>
    <string name="username">Username:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="agreement">The following are a series of cognitive tasks, several of which are the versions of the tasks you completed in the original Project Talent study.\n\n
        \t • Read the instructions for each task carefully.\n
        \t • Do the best you can. If you are unsure of the right answer, pick the one you think is the best.\n
        \t • If a task includes multiple-choice questions, select only one answer.\n
        \t • There is only one right answer for each question.\n\n
        Press the NEXT button to begin the first task.</string>
    <string name="title_activity_agreement"></string>
    <string name="title_activity_sec_a_">Section A</string>
    <string name="dob">Birth Date:</string>
    <string name="month">Month:</string>
    <string name="day">Day:</string>
    <string name="year">Year:</string>
    <string-array name="month_array">
        <item>--</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="day_array">
        <item>--</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="year_array">
        <item>--</item>
        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
    </string-array>
    <string name="aw993">What is your current marital status?</string>
    <string name="aw993a1">MARRIED</string>
    <string name="aw993a2">LIVING WITH PARTNER AS IF MARRIED</string>
    <string name="aw993a3">SINGLE</string>
    <string name="aw993a4">DIVORCED</string>
    <string name="aw993a5">WIDOWED</string>
    <string name="other">OTHER</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="a028">Are you living in a nursing home or other health care facility?</string>
    <string name="aw994">Do you consider yourself to be retired?</string>
    <string name="a098s1">You told us that you are retired. Some people who are retired do still work for pay. In terms of your current employment situation, are you currently doing any work for pay?</string>
    <string name="a098s2">In terms of your current employment situation, are you currently doing any work for pay?</string>
    <string name="a099">On your current (main) job, do you work for someone else, are you self-employed, or what?</string>
    <string name="a099a1">WORK FOR SOMEONE ELSE</string>
    <string name="a099a2">SELF-EMPLOYED</string>
    <string name="a100">On your current (main) job, approximately how many hours do you work each week?</string>
    <string name="a100label">HOURS PER WEEK</string>
    <string name="a101">Thinking about work in general and not just your present situation, what do you think the chances are that you will be doing any work for pay after you reach age 62? Please answer on a scale of 0 to 10, where 0 means \'surely won\'t happen\' and 10 means \'surely will happen.\'</string>
    <string name="a101a1">SURELY WONT HAPPEN</string>
    <string name="a101a2">SURELY WILL HAPPEN</string>
    <string name="a102">Thinking about work in general and not just your present situation, what do you think the chances are that you will be doing any work for pay after you reach age 65? Please answer on a scale of 0 to 10, where 0 means \'surely won\'t happen\' and 10 means \'surely will happen.\'</string>
    <string name="a103">Thinking about work in general and not just your present situation, what do you think the chances are that you will be doing any work for pay after you reach age 70? Please answer on a scale of 0 to 10, where 0 means \'surely won\'t happen\' and 10 means \'surely will happen.\'</string>
    <string name="a104">Thinking about work in general and not just your present situation, what do you think the chances are that you will be working for pay again at any point in the future? Please answer on a scale of 0 to 10, where 0 means \'surely won\'t happen\' and 10 means \'surely will happen.\'</string>
    <string name="hearing_intro_auw999">The purpose of the next set of questions is to identify any problems you may experience due to any hearing loss.  If you use a hearing aid, please answer the way you hear with the hearing aid.</string>
    <string name="au001">Does a hearing problem cause you to feel embarrassed when meeting new people? </string>
    <string name="au002">Does a hearing problem cause you to feel frustrated when talking to members of your family?  </string>
    <string name="au003">Do you have difficulty hearing when someone speaks in a whisper? </string>
    <string name="au004">Do you feel handicapped by a hearing problem?</string>
    <string name="au005">Does a hearing problem cause you difficulty when visiting friends, relatives or neighbors? </string>
    <string name="au006">Does a hearing problem cause you to attend religious services less often than you would like? </string>
    <string name="au007">Does a hearing problem cause you to have arguments with family members? </string>
    <string name="au008">Does a hearing problem cause you difficulty when listening to a TV or radio? </string>
    <string name="au009">Do you feel that any difficulty with your hearing limits or hampers your personal or social life? </string>
    <string name="au010">Does a hearing problem cause you difficulty when in a restaurant with relatives or friends?  </string>
    <string name="c102">Do you ever wear a hearing aid?</string>
    <string name="c103s1">Is your hearing excellent, very good, good, fair, or poor using a hearing aid as usual?</string>
    <string name="c103s2">Is your hearing excellent, very good, good, fair, or poor?</string>
    <string name="c095">Is your eyesight excellent, very good, good, fair, or poor using glasses or corrective lenses as usual?</string>
    <string name="c096">How good is your eyesight for seeing things at a distance, like recognizing a friend across the street, using glasses or corrective lenses as usual?</string>
    <string name="c097">How good is your eyesight for seeing things up close, like reading ordinary newspaper print, using glasses or corrective lenses as usual?</string>
    <string name="excellent">EXCELLENT</string>
    <string name="very_good">VERY GOOD</string>
    <string name="good">GOOD</string>
    <string name="fair">FAIR</string>
    <string name="poor">POOR</string>
    <string name="sometimes">SOMETIMES</string>
    <string name="title_activity_marital_status_">Marital Status</string>
    <string name="title_activity_nursing_status_">Nursing Status</string>
    <string name="title_activity_retired">Retired</string>
    <string name="title_activity_current_pay_">Currently Working for Pay</string>
    <string name="title_activity_work_for_">Works For or Self Employed</string>
    <string name="title_activity_week_hours_">Hours Work Each Week</string>
    <string name="title_activity_work_after62_">Work Beyond Age 62</string>
    <string name="title_activity_work_after65_">Work After Age 65</string>
    <string name="title_activity_work_after70_">Work After Age 70</string>
    <string name="d102">Compared to two years ago, would you say your memory is better now, about the same, or worse now than it was then?</string>
    <string name="better">BETTER</string>
    <string name="same">ABOUT THE SAME</string>
    <string name="worse">WORSE</string>
    <string name="msg2">You have not submitted a response yet. Your answers are important to us. Please try to answer as best you can. If you are not willing to provide an answer, please press NEXT to continue.</string>
    <string name="w002">How often do you check your e-mail? </string>
    <string name="w019">The words and images on the tablet were easy to see and read.</string>
    <string name="option1">DAILY</string>
    <string name="option2">3 TO 4 TIMES A WEEK</string>
    <string name="option3">1 TO 2 TIMES A WEEK</string>
    <string name="option4">2 TO 3 TIMES A MONTH</string>
    <string name="option5">ONCE A MONTH OR LESS</string>
    <string name="rating1">DEFINITELY DISAGREE</string>
    <string name="rating2">MOSTLY DISAGREE</string>
    <string name="rating3">NEUTRAL</string>
    <string name="rating4">MOSTLY AGREE</string>
    <string name="rating5">DEFINITLEY AGREE</string>
    <string name="clear">CLEAR</string>
</resources>