<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projecttalentoriginal.WorkAgainAfter70_Activity" >

    <TextView
        android:id="@+id/question"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:layout_alignParentTop="true"
	    android:textSize="30sp"
        android:text="@string/a104" />
    
    <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/question"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

        <RadioButton
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="30sp" />

	    <RadioButton android:id="@+id/one"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/one"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/two"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/two"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/three"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/three"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/four"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/four"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/five"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/five"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/six"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/six"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/seven"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/seven"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/eight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/eight"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/nine"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nine"
	        android:layout_marginLeft="55dp"
	        android:textSize="30sp"/>

	    <RadioButton
	        android:id="@+id/ten"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="55dp"
	        android:text="@string/ten"
	        android:textSize="30sp" />

	</RadioGroup>
	<Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp"
        android:layout_marginRight="39dp"
        android:background="#1E669B"
        android:radius="10dp"
        android:text="@string/button_str"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="85dp"
	    android:layout_height="wrap_content"
	    android:gravity="center" 
	    android:textSize="20sp"
	    android:layout_alignBottom="@+id/textView1"
	    android:layout_alignRight="@+id/button3"
	    android:text="@string/a101a2" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="85dp"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/radioGroup"
	    android:layout_below="@+id/radioGroup"
	    android:gravity="center"
	    android:text="@string/a101a1"
	    android:textSize="20sp" />

</RelativeLayout>
