<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projecttalentoriginal.W019_Activity" >

    <TextView
        android:id="@+id/question"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentTop="true"
	    android:textSize="35sp"
        android:text="@string/w019" />
    
    <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   android:layout_centerHorizontal="true"
    android:layout_below="@+id/question"
   
    android:layout_marginTop="150dp"
    android:orientation="horizontal">

        

	    <RadioButton android:id="@+id/one"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/one"
	        android:layout_marginLeft="150dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/two"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/two"
	        android:layout_marginLeft="150dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/three"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/three"
	        android:layout_marginLeft="150dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/four"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/four"
	        android:layout_marginLeft="150dp"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/five"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/five"
	        android:layout_marginLeft="150dp"
	        android:textSize="30sp"/>

	</RadioGroup>
	<Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp"
        android:layout_marginRight="39dp"
        android:background="#1E669B"
        android:radius="10dp"
        android:text="@string/button_str"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_alignBottom="@+id/textView2"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:textSize="30sp"
	    android:text="@string/rating3" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_alignLeft="@+id/radioGroup"
	    android:layout_centerVertical="true"
	    android:layout_marginLeft="72dp"
	    android:gravity="center"
	    android:text="@string/rating1"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_centerVertical="true"
	    android:layout_toLeftOf="@+id/textView3"
	    android:gravity="center"
	    android:text="@string/rating2"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_alignTop="@+id/textView3"
	    android:layout_toRightOf="@+id/textView4"
	    android:gravity="center"
	    android:text="@string/rating5"
	    android:textSize="30sp" />

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_centerVertical="true"
	    android:layout_toRightOf="@+id/textView3"
	    android:gravity="center"
	    android:text="@string/rating4"
	    android:textSize="30sp" />

</RelativeLayout>
