<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projecttalentoriginal.W002_Activity" >

   <TextView
        android:id="@+id/question"
        android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:layout_alignParentTop="true"
	    android:textSize="30sp"
	    android:text="@string/w002"/>
   <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/question"
    android:layout_marginTop="30dp"
    android:layout_alignParentLeft="true"
    android:orientation="vertical">
	    <RadioButton android:id="@+id/o1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option1"
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/o2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option2"
	        android:layout_marginTop="10dp"	        
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/o3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option3"
	        android:layout_marginTop="10dp"	        
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/o4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option4"
	        android:layout_marginTop="10dp"	        
	        android:textSize="30sp"/>
	    <RadioButton android:id="@+id/o5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/option5"
	        android:layout_marginTop="10dp"	        
	        android:textSize="30sp"/>
	</RadioGroup>
    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="45dp"
        android:layout_marginRight="39dp"
        android:background="#1E669B"
        android:radius="10dp"
        android:text="@string/button_str"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

</RelativeLayout>
