<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projecttalentoriginal.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/first_str"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="112dp"
        android:layout_marginRight="72dp"
        android:background="#1E669B"
        android:radius="10dp"
        android:textSize="26sp"
        android:text="@string/button_str"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/username_msg"
        android:textSize="24sp" />
    
     <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="76dp"
        android:layout_toRightOf="@+id/Button08"
        android:gravity="center"
        android:labelFor="@+id/editText1"
        android:text="@string/username"
        android:textSize="30sp" />
    

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="22dp"
        android:textSize="30sp"
        android:cursorVisible="false"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/Button08"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/Button09"
        android:layout_alignBottom="@+id/Button09"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_toRightOf="@+id/Button09"
        android:text="@string/one" />
    
    <Button
        android:id="@+id/Button07"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button08"
        android:layout_alignBottom="@+id/Button08"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button08"
        android:text="@string/two" />
    
    <Button
        android:id="@+id/Button06"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button07"
        android:layout_alignBottom="@+id/Button07"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button07"
        android:text="@string/three" />

    <Button
        android:id="@+id/Button05"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button06"
        android:layout_alignBottom="@+id/Button06"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button06"
        android:text="@string/four" />
    
    <Button
        android:id="@+id/Button04"
        style="?android:attr/buttonStyleSmall"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button05"
        android:layout_alignBaseline="@+id/Button05"
        android:layout_alignBottom="@+id/Button05"
        android:text="@string/five" />
    
    <Button
        android:id="@+id/Button03"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button04"
        android:layout_alignBottom="@+id/Button04"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button04"
        android:text="@string/six" />

   
    <Button
        android:id="@+id/Button02"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button03"
        android:layout_alignBottom="@+id/Button03"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button03"
        android:text="@string/seven" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button02"
        android:text="@string/eight" />

    <Button
        android:id="@+id/Button11"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_marginLeft="34dp"
        android:textSize="30sp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_toRightOf="@+id/Button01"
        android:text="@string/nine" />

    <Button
        android:id="@+id/Button09"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="30sp"
        android:layout_above="@+id/button1"

        android:layout_marginBottom="62dp"
        android:layout_marginLeft="26dp"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignTop="@+id/textView3"
        android:background="#FFFFAA"
        android:onClick="startRecording"
        android:radius="10dp"
        android:text="@string/clear"
        android:textColor="#000000"
        android:textSize="26sp" />

</RelativeLayout>